// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionPage renders without error 1`] = `
<div>
  <div>
    <Button
      id="addTrans"
      onClick={[Function]}
      type="button"
    >
      Add
    </Button>
    <Button
      id="prevButton"
      onClick={[Function]}
      type="button"
    >
      Prev
    </Button>
    Jan 1st 18
    <Button
      id="nextButton"
      onClick={[Function]}
      type="button"
    >
      Next
    </Button>
    <Component
      label="Show by"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "day",
            "value": "DAY",
          },
          Object {
            "label": "week",
            "value": "WEEK",
          },
        ]
      }
      value="DAY"
    />
  </div>
  <Component
    date="2018-01-01T00:00:00.000Z"
    dateEnd="2018-01-02T00:00:00.000Z"
    dateStart="2018-01-01T00:00:00.000Z"
    onChangePeriod={[Function]}
    period="DAY"
  />
</div>
`;

exports[`TransactionPage renders without error 2`] = `
<div>
  <div>
    <Button
      id="addTrans"
      onClick={[Function]}
      type="button"
    >
      Add
    </Button>
    <Button
      id="prevButton"
      onClick={[Function]}
      type="button"
    >
      Prev
    </Button>
    Jan 1st 18
    <Button
      id="nextButton"
      onClick={[Function]}
      type="button"
    >
      Next
    </Button>
    <Component
      label="Show by"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "day",
            "value": "DAY",
          },
          Object {
            "label": "week",
            "value": "WEEK",
          },
        ]
      }
      value="WEEK"
    />
  </div>
  <Component
    date="2018-01-01T00:00:00.000Z"
    dateEnd="2018-01-08T00:00:00.000Z"
    dateStart="2018-01-01T00:00:00.000Z"
    onChangePeriod={[Function]}
    period="WEEK"
  />
</div>
`;

exports[`TransactionPage should hide transaction form initially and show after button click 1`] = `
<TransactionPage
  date="2018-01-01T00:00:00.000Z"
  onChangePeriod={[Function]}
  period="DAY"
>
  <div>
    <div>
      <Button
        id="addTrans"
        onClick={[Function]}
        type="button"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Add
        </button>
      </Button>
      <Button
        id="prevButton"
        onClick={[Function]}
        type="button"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Prev
        </button>
      </Button>
      Jan 1st 18
      <Button
        id="nextButton"
        onClick={[Function]}
        type="button"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Next
        </button>
      </Button>
      <Component
        label="Show by"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "day",
              "value": "DAY",
            },
            Object {
              "label": "week",
              "value": "WEEK",
            },
          ]
        }
        value="DAY"
      >
        <label
          htmlFor="show by"
        >
          Show by: 
          <Select
            disabled={false}
            id="show by"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "day",
                  "value": "DAY",
                },
                Object {
                  "label": "week",
                  "value": "WEEK",
                },
              ]
            }
            value="DAY"
          >
            <select
              disabled={false}
              onChange={[Function]}
              value="DAY"
            >
              <option
                key="DAY"
                value="DAY"
              >
                day
              </option>
              <option
                key="WEEK"
                value="WEEK"
              >
                week
              </option>
            </select>
          </Select>
        </label>
      </Component>
    </div>
    <Component
      dateEnd="2018-01-02T00:00:00.000Z"
      dateStart="2018-01-01T00:00:00.000Z"
      onClose={[Function]}
    >
      <div
        id="Form"
      >
        2018-01-01T00:00:00.000Z
        2018-01-02T00:00:00.000Z
        <button
          id="close"
          onClose={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </Component>
    <Component
      date="2018-01-01T00:00:00.000Z"
      dateEnd="2018-01-02T00:00:00.000Z"
      dateStart="2018-01-01T00:00:00.000Z"
      onChangePeriod={[Function]}
      period="DAY"
    >
      <div
        id="List"
      >
        2018-01-01T00:00:00.000Z
        2018-01-02T00:00:00.000Z
      </div>
    </Component>
  </div>
</TransactionPage>
`;
